styles/style.css
html {
   background-image: url("../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
}

body {
  font-family: 'Noto Sans', sans-serif, arial;
  font-size: 15px;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.container {
  width: 85%;
  margin: auto;
  overflow: hidden;
}

header {
  padding-top: 25px;
  min-height: 75px;
}

header a {
  text-decoration: none;
  text-transform: uppercase;
  font-size: 15px;
}

header li {
  display: inline-flex;
  padding: 0 15px 0 15px;
}

header ul {
  margin: 0;
  padding: 0;
}

header h1 {
  font-size: 35px;
  margin: 0;
  padding-bottom: 25px;
  float: left;
}

header nav {
float: right;
margin-top: 20px;
padding-bottom: 10px;
}

header .highlight a {
  color: rgb(102, 0, 0);
  font-size: 32px;
  font-style: oblique;
}

header .current a {
  color: rgb(102, 0, 0);
  font-weight: bold;
}

header a:hover {
  color: rgb(102, 0, 0);
  font-weight: bold;
}

#newsletter {
  padding-top: 1%;
}

#newsletter .button_1 {
text-decoration: none;
color: white;
background-color: rgb(217, 165, 118);
}

#introduction {
  min-height: 500px;
  background-image: url("../images/platform2.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  margin: 4% 5% 0 5%;
}

#introduction h1 {
  font-size: 30px;
  text-align: center;
}

#introduction p {
  font-size: 16px;
  text-align: center;
}

#introduction a {
  font-size: 12px;
}

#about_me h2 {
  text-align: center;
  font-size: 1.5em;
  position: relative;
}

#about_me h2:after {
  content: '';
  position: absolute;
  width: 60px;
  height: 2px;
  margin-left: -30px;
  left: 50%;
  bottom: -5px;
  background-color: rgb(102, 0, 0);
}

.container #selfie {
  overflow: auto;
  width: 30%;
  height: 500px;
  padding-top: 25px;
  float: left;
}

#selfie img {
  border-color: rgb(102, 0, 0);
  border-width: 5px;
  border-style: solid;
  border-radius: 50%;
}

.container #intro {
  width: 65%;
  padding-left: 1.5%;
  padding-right: 1.5%;
  margin-right: .5%;
  height: 500px;
  float: left;
  overflow: scroll;
}

#footer {
  font-size: 14px;
  padding: 20px;
  margin-top: 10px;
  text-align: center;
  font-style: oblique;
  color: rgb(140, 140, 150)
}

.joke {
  font-family: Lobster, arial;
  text-align: center;
  font-size: 40px;
  text-shadow: 5px 5px #ffcc00;
  background-color: white;
  border: white solid 1px;
}

.emoji {
  height: 650px;
  background-image: url("../images/lol.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 70;
}

.footer {
  text-align: center;
  background-color: white;
  border: white solid 1px;
}

@media(max-width: 768px) {
  header nav, header h1, .container #selfie, .container #intro {
    float: none;
    text-align: center;
    width: 100%;
  }
}

